--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,7 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
+					<finalName>api</finalName>
 					<excludes>
 						<exclude>
 							<groupId>org.projectlombok</groupId>
